# logistic-app

./: .gitignore  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Docker/: .env.example  docker-compose.yaml
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: category.rs  item.rs  mod.rs  prelude.rs  user.rs
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230417_223140_create_category_table.rs  m20230417_223151_create_item_table.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: jwt.rs
src-tauri/src/category/data/: mod.rs
src-tauri/src/category/handles/: mod.rs
src-tauri/src/category/repository/: mod.rs
src-tauri/src/item/data/: mod.rs
src-tauri/src/item/handles/: mod.rs
src-tauri/src/item/repository/: mod.rs
src-tauri/src/user/: mod.rs
src-tauri/src/user/data/: mod.rs
src-tauri/src/user/handles/: mod.rs
src-tauri/src/user/repository/: mod.rs
src/components/: Greet.svelte
src/lib/: Greet.svelte
src/routes/: +page.svelte
src/routes/category/: +page.svelte
src/routes/item/: +page.svelte
src/routes/login/: +page.svelte
src/routes/register/: +page.svelte
